[package]
name = "cargo_pkg_info"
version = "0.1.0"
edition = "2021"
authors = ["MoghTech"]
description = "MongoDB in rust, simplified."
repository = "https://github.com/mbecker20/cargo_pkg_info"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
